# Sendo

./: .gitignore  CMakeLists.txt  README.md  Server.h  main.cpp
object/root/enforcer/: py.py
object/root/sensor/: sense.py
